--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Advent of Love - 2023</title>
 </head>
 <body>
-<script src="https://raw.githubusercontent.com/Alex-Scofield/Temporary/main/script.js"></script>
+<script src="script.js"></script>
    <h1>ADVENT OF LOVE - Ily, Rebeca </h1>
 </body>
 </html>
